# LittleLatchy

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  test.sh
.github/workflows/: build.yml  linux.yml  macos.yml  release.yml  windows.yml
Source/: JuceConfig.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginTests.cpp
